fixed the menu ul spacing in userMenu

--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -43,13 +43,20 @@
   padding-top : 20px;
 }
 
+.navbar-nav{
+  /* border-bottom: 4px solid var(--lightShade); */
+}
+
 .navbar-brand{
     font-weight: bolder;
+    
   }
 
-h3{
+.navbar-brand>h3{
   color: var(--lightShade);
   font-weight: bolder;
+  width:fit-content;
+  margin: auto;
 }
 
 
@@ -61,13 +68,12 @@ h3{
 .active-link{
   color:var(--lightShade);
   font-weight: bolder;
-  border-bottom: 4px solid var(--orange);
+  border-bottom: 3px solid var(--orange);
  
 }
 
 .active-link:hover{
-  color: var(--orange) !important;
-  
+  color: var(--orange) !important; 
 }
 
 a{
@@ -92,26 +98,30 @@ a:hover{
     padding-top : 5px;
   }
 
-  li:hover{
-    transition-duration: 0.5s;
-    border-radius: 10px !important;
-  }
+    /* "ClientRecords" left padding is 0  */
+    .navbar-brand{
+      padding-left: 0px;
+    }
 
-
-  .navbar-nav{
-    padding:1rem;
-  }
-
-  
-  .active-link{
-    color:var(--lightShade);
+   .navbar-nav{
     padding-left:1rem;
-    
-  }
+    }
 
-  /* "ClientRecords" left padding is 0  */
-  .navbar-brand{
-    padding-left: 0px;
-  }
+      li:hover{
+        transition-duration: 0.5s;
+        border-radius: 10px !important;
+      }
+
+        .nav-link{
+          width: 90%;
+        }
+
+        .active-link{
+          color:var(--orange);
+          padding-left:1rem;
+          /* width: max-content; */
+        }
+
+ 
 
 }
